# ethbrussels-poc

./: README.md
cli/: .gitignore  Cargo.toml  data.csv
cli/src/: keygen.rs  main.rs  process.rs  zen_node.rs
cli/src/decrypt/: mod.rs
cli/src/lighthouse/: mod.rs
cli/src/zk_proof/: mod.rs
cli/zk/: proof.json
client/: bun.lockb  package.json
client/app/: globals.css  layout.tsx  page.tsx  providers.tsx
client/app/components/: ComputePopup.tsx  Navbar.tsx
client/app/compute/: page.tsx
client/app/store/: page.tsx
contract/: compute_handler.json  compute_handler.sol  verifier..json
zk/: input.json  proof.json
