[package]
edition = "2021"
name = "Datazen"
version = "0.1.0"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
bincode = "1.3.3"
bytes = "1.6.0"
cbc = "0.1.2"
clap = {version = "4.5.4", features = ["derive"]}
csv = "1.3.0"
dialoguer = "0.11.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4.22"
rand = "0.8.5"
reqwest = {version = "0.12.5", features = ["json", "multipart"]}
rocket = {version = "0.5.1", features = ["json", "serde_json"]}
rocket-multipart-form-data = "0.10.7"
rocket_cors = "0.6.0"
rsa = "0.9.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10.8"
tempfile = "3.10.1"
tfhe = {version = "0.7.1", features = ["boolean", "shortint", "integer", "aarch64-unix"]}
tokio = {version = "1.0", features = ["full"]}
tokio-tungstenite = "0.16"
uuid = {version = "1.10.0", features = ["v4", "v5"]}
warp = "0.3"
wasm-bindgen = "0.2.92"
